--- a/index.html
+++ b/index.html
@@ -217,33 +217,52 @@
             </div>
         </div>
 
-        <div class="callToActionWrapper">
-            <div>
-                <h2>Mit einer Nachricht zu deinem Print!</h2>
-                <p style="max-width: 700px;">Hast du ein besonderes Geschenk im Kopf oder suchst du nach einer praktischen Lösung für deinen
-                    Alltag?
-                    Schreib uns einfach eine unverbindliche Nachricht mit deiner Vorstellung – Wir (Beni und Marie)
-                    beraten dich persönlich und erstellen dir deinen Print</p>
-                    <p>z.B. Ich hätte gerne <b>10</b> von den <b>Glücksschweinchen</b> bis zum <b>10.01</b></p>
-                <a style="padding: 5px 10px; font-size: 1.125rem; margin-right: 10px;"
-                    href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary">Nachricht
-                    schreiben</a>
-            </div>
-            <video autoplay loop muted playsinline poster="fallback-image.JPG" class="druckenPlayer">
-                <source src="./Fotos/Cropped_Drucken.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-
-    </div>
-        <div class="footer">
-            <div class="pagecontainer">
-                <div style="display: flex; justify-content: space-between;">
-                    <p>Made in Leo by Marie und Beni</p>
-                    <a href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage"><p>Anfragen</p></a>
+        <section class="callToActionWrapper">
+            <div class="cta-container">
+                <div class="cta-content">
+                    <div class="cta-text">
+                        <h2 class="cta-title">Mit einer Nachricht zu deinem Print!</h2>
+                        <p class="cta-description">Hast du ein besonderes Geschenk im Kopf oder suchst du nach einer praktischen Lösung für deinen
+                            Alltag? Schreib uns einfach eine unverbindliche Nachricht mit deiner Vorstellung – Wir (Beni und Marie)
+                            beraten dich persönlich und erstellen dir deinen Print</p>
+                        <div class="cta-example">
+                            <p class="example-text"><span class="example-label">Beispiel:</span> Ich hätte gerne <strong>10</strong> von den <strong>Glücksschweinchen</strong> bis zum <strong>10.01</strong></p>
+                        </div>
+                        <a href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="btn btn-primary cta-button">Nachricht schreiben</a>
+                    </div>
+                    <div class="cta-media">
+                        <video autoplay loop muted playsinline poster="fallback-image.JPG" class="druckenPlayer">
+                            <source src="./Fotos/Cropped_Drucken.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+    </div>
+        <footer class="footer">
+            <div class="pagecontainer">
+                <div class="footer-content">
+                    <div class="footer-section">
+                        <h3>BY MB</h3>
+                        <p>Präziser 3D-Druck aus Leopoldsdorf</p>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Kontakt</h4>
+                        <a href="mailto:bymariebeni@gmail.com?subject=3D%20Druck%20Anfrage" class="footer-link">bymariebeni@gmail.com</a>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Info</h4>
+                        <p class="footer-small">Made in Leo by Marie und Beni</p>
+                        <p class="footer-small">Dies ist ein Portfolioprojekt von Beni und dient nur zu Demonstrationszwecken.</p>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    <p>&copy; 2026 BY MB - Alle Rechte vorbehalten</p>
+                </div>
+            </div>
+        </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
